Fixed CrewMates-Open-Source EduHelp Project.

--- a/projects.json
+++ b/projects.json
@@ -58,7 +58,7 @@
   "chiraag-kakar/sharenlearn",
   "vinitshahdeo/PortScanner",
   "ayan-biswas0412/gssoc2021-HotelOnTouch",
-  "CrewMates-Open-Source/EduHelp.git",
+  "CrewMates-Open-Source/EduHelp",
   "knoldus/leaderboard",
   "srrathi/Hire-Smart",
   "klarEDA/klar-EDA",
