Added CSwala awesome-computer-science Project.

--- a/projects.json
+++ b/projects.json
@@ -93,6 +93,7 @@
   "kaushik-rishi/rocketcp",
   "ambujraj/ambsql",
   "sairish2001/makesmatheasy-documentation",
+  "CSwala/awesome-computer-science",
   "ProjectSakura/ProjectSakura.github.io",
   "ProjectSakura/Mirai",
   "ProjectSakura/wiki",
