--- a/projects.json
+++ b/projects.json
@@ -15,6 +15,9 @@
   "DSC-JSS-NOIDA/Plasma-Donor-App",
   "smaranjitghose/doc2pen",
   "himanshusharma89/relic_bazaar",
+  "CSwala/CSwala-android",
+  "CSwala/awesome-computer-science",
+  "CSwala/awesome-career-pages",
   "Algo-Phantoms/Algo-Tree",
   "Algo-Phantoms/Algo-Phantoms-Android",
   "Algo-Phantoms/Algo-Phantoms-Backend",
@@ -93,7 +96,6 @@
   "kaushik-rishi/rocketcp",
   "ambujraj/ambsql",
   "sairish2001/makesmatheasy-documentation",
-  "CSwala/awesome-computer-science",
   "ProjectSakura/ProjectSakura.github.io",
   "ProjectSakura/Mirai",
   "ProjectSakura/wiki",
