Added TesseractCoding: NeoAlgo-Docs.

--- a/projects.json
+++ b/projects.json
@@ -1,5 +1,6 @@
 [
   "TesseractCoding/NeoAlgo",
+  "TesseractCoding/NeoAlgo-Docs",
   "praveenscience/Internship-LMS-FrontEnd",
   "Manthan933/Manthan",
   "awantika10/Desgen",
