add  repositories for UniAuth
https://github.com/uniauth

--- a/projects.json
+++ b/projects.json
@@ -101,5 +101,20 @@
   "ProjectSakura/Mirai",
   "ProjectSakura/wiki",
   "ProjectSakura/maintainers",
-  "ProjectSakura/download"
+  "ProjectSakura/download",
+  "UniAuth/fiber-middleware",
+  "UniAuth/http-exception-transformer",
+  "UniAuth/express-middleware",
+  "UniAuth/uniauth.github.io",
+  "UniAuth/uniauth-backend",
+  "UniAuth/.github",
+  "UniAuth/django-middleware",
+  "UniAuth/artwork",
+  "UniAuth/flask-middleware",
+  "UniAuth/example-nodejs",
+  "UniAuth/example-flask",
+  "UniAuth/UniAuth",
+  "UniAuth/laravel-middleware",
+  "UniAuth/gin-middleware",
+  "UniAuth/uniauth-passport-strategy"
 ]
