--- a/projects.json
+++ b/projects.json
@@ -17,6 +17,7 @@
   "smaranjitghose/doc2pen",
   "himanshusharma89/relic_bazaar",
   "CSwala/CSwala-android",
+  "CSwala/CSwala-website",
   "CSwala/awesome-computer-science",
   "CSwala/awesome-career-pages",
   "Algo-Phantoms/Algo-Tree",
