--- a/projects.json
+++ b/projects.json
@@ -12,7 +12,7 @@
   "srimani-programmer/Breast-Cancer-Predictor",
   "mishraaditya595/ScanIt",
   "purnima143/Kurakoo",
-  "ALPHAVIO/BlogSite",
+  "ALPHAVIO/WordNook",
   "DSC-JSS-NOIDA/Plasma-Donor-App",
   "smaranjitghose/doc2pen",
   "himanshusharma89/relic_bazaar",
