--- a/projects.json
+++ b/projects.json
@@ -102,6 +102,7 @@
   "ProjectSakura/ProjectSakura.github.io",
   "ProjectSakura/Mirai",
   "ProjectSakura/wiki",
+  "ProjectSakura/blog",
   "ProjectSakura/maintainers",
   "ProjectSakura/download",
   "ProjectSakura/contributors",
