Split sairish2001/makesmatheasy project.

--- a/projects.json
+++ b/projects.json
@@ -92,13 +92,14 @@
   "swapnilsparsh/Rescue",
   "pankajkumarbij/easy-job-intern",
   "Tejas1510/Athavani",
-  "sairish2001/makesmatheasy",
+  "sairish2001/makesmatheasy+created:>2021-05-15",
+  "sairish2001/makesmatheasy+created:<=2021-05-15",
+  "sairish2001/makesmatheasy-documentation",
   "Technocolabs100/Stack-Overflow-Tag-Predictions",
   "Developer-Student-Clubs-VSSUT-Burla/Master-PyAlgo",
   "i-tick/HackNitr-2020",
   "kaushik-rishi/rocketcp",
   "ambujraj/ambsql",
-  "sairish2001/makesmatheasy-documentation",
   "ProjectSakura/ProjectSakura.github.io",
   "ProjectSakura/Mirai",
   "ProjectSakura/wiki",
