--- a/projects.json
+++ b/projects.json
@@ -3,6 +3,7 @@
   "TesseractCoding/NeoAlgo+created:<=2021-04-15",
   "TesseractCoding/NeoAlgo-Docs",
   "praveenscience/Internship-LMS-FrontEnd",
+  "praveenscience/easya-website",
   "Manthan933/Manthan",
   "awantika10/Desgen",
   "girlscript/Feminist-Bible-FrontEnd-Phase1",
