Fixed makesmatheasy/makesmatheasy demon.

--- a/projects.json
+++ b/projects.json
@@ -93,8 +93,17 @@
   "swapnilsparsh/Rescue",
   "pankajkumarbij/easy-job-intern",
   "Tejas1510/Athavani",
-  "makesmatheasy/makesmatheasy+created:>2021-05-15",
-  "makesmatheasy/makesmatheasy+created:<=2021-05-15",
+  "makesmatheasy/makesmatheasy+created:<2021-05-15",
+  "makesmatheasy/makesmatheasy+created:2021-05-15",
+  "makesmatheasy/makesmatheasy+created:2021-05-16",
+  "makesmatheasy/makesmatheasy+created:2021-05-17",
+  "makesmatheasy/makesmatheasy+created:2021-05-18",
+  "makesmatheasy/makesmatheasy+created:2021-05-19",
+  "makesmatheasy/makesmatheasy+created:2021-05-20",
+  "makesmatheasy/makesmatheasy+created:2021-05-21",
+  "makesmatheasy/makesmatheasy+created:2021-05-22",
+  "makesmatheasy/makesmatheasy+created:2021-05-23",
+  "makesmatheasy/makesmatheasy+created:>2021-05-23",
   "makesmatheasy/makesmatheasy-documentation",
   "Technocolabs100/Stack-Overflow-Tag-Predictions",
   "Developer-Student-Clubs-VSSUT-Burla/Master-PyAlgo",
